# cpp-HardwareInfo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/utils/: LinuxDeviceInfo.h  WindowsDeviceInfo.h
src/: main.cpp
src/utils/: LinuxDeviceInfo.cpp  WindowsDeviceInfo.cpp
